--- a/assets/css/mycss.css
+++ b/assets/css/mycss.css
@@ -10,3 +10,68 @@
 .icon3{
     margin-left: 15px;
 }
+.addneworder{
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif !important;
+    font-size: 1.125rem !important;
+    line-height: 1.4em !important;
+    font-weight: 250 !important;
+    background: linear-gradient(60deg, #7b1fa2, #913f9e);
+    text-decoration: none;
+}
+.popupfather{
+    display: none;
+    position: fixed;
+    background:  rgba(51, 51, 51, 0.301);
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999999;
+}
+.popup{
+    position: absolute;
+    background-color: #212F3C;
+    color: #3C4858;
+    font-weight: 300;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+    top: 50%;
+    right: 50%;
+    width: 500px;
+    height: auto;
+    border-radius: 6px;
+    transform: translate(50%, -50%);
+    padding: 50px 10px;
+}
+
+.closepopup{
+    position: absolute;
+    top: 20px;
+    right: 10px;
+    cursor: pointer;
+    color:white;
+}
+.input {
+    width:100%;
+    height: 35px;
+    display: block;
+    margin: 10px auto;
+    position: relative;
+    background-color: #212F3C;
+    border: 1px solid #3C4858;
+    border-radius: 25px;
+    padding: 0 10px;
+    color: #000;
+}
+.hcard{
+    border-radius: 6px;
+    color: #333333;
+
+}
+.accpetOrder{
+    position: absolute;
+    bottom: -10px;
+    right: 50%;
+    background-color: #212F3C !important;
+    color: #3C4858;
+    transform: translate(50%, -50%);
+}
